25/01/14 글쓰기 목록

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,7 +6,7 @@
       <div class="h-100 d-flex align-items-center justify-content-between mx-5">
         <!-- logo -->
         <div>
-          <h1><a href="/post/list-view">MEMO 게시판</a></h1>
+          <h1>MEMO 게시판</h1>
         </div>
         <!-- 로그인 정보 영역 -->
         <!-- 로그인 시 -->
