--- a/src/main/resources/templates/user/signIn.html
+++ b/src/main/resources/templates/user/signIn.html
@@ -47,7 +47,7 @@
                 $.post(url, params) // requset
                 .done(function(data) { // response - callback
                     if (data.result == "성공") {
-                        location.href = "/post/list-view";
+                        location.href = "/post/post-list-view";
                     } else {
                         alert(data.error_message);
                     }
