--- a/src/main/resources/templates/post/postCreate.html
+++ b/src/main/resources/templates/post/postCreate.html
@@ -11,7 +11,7 @@
             <input type="text" id="subject" class="form-control mb-2" placeholder="제목을 입력하세요.">
             <textarea id="content" class="form-control" placeholder="내용을 입력하세요." rows="10"></textarea>
             <div class="d-flex justify-content-end my-3">
-                <input type="file" id="file">
+                <input type="file" id="file" accept=".jpg, .png, .gif">
             </div>
 
             <div class="d-flex justify-content-between">
@@ -43,6 +43,9 @@
                 // alert("글쓰기");
                 let subject = $("#subject").val();
                 let content = $("#content").val();
+                let fileName = $("#file").val();
+
+                console.log(fileName);
 
                 // validation
                 if (!subject) {
@@ -55,10 +58,25 @@
                     return;
                 }
 
+                // 파일명이 있으면(업로드시) 확장자 체크
+                if (fileName) {
+                    // alert("파일이 있다.");
+                    // C:\fakepath\강아지.jpg
+                    let extension = fileName.split(".").pop().toLowerCase();
+                    console.log(extension);
+
+                    if ($.inArray(extension, ["jpg", "png", "gif"]) == -1) {
+                        alert("이미지 파일만 업로드할 수 있습니다.");
+                        $("#file").val(""); // 파일을 비운다.
+                        return;
+                    }
+                }
+
                 // 이미지 업로드시 form태그 반드시 필요 => js에서 폼태그를 만든다.
                 let formData = new FormData();
                 formData.append("subject", subject); // key는 form태그의 name과 같음 -> request param명
                 formData.append("content", content); // key는 form태그의 name과 같음 -> request param명
+                formData.append("file", $("#file")[0].files[0]); // 파일
 
                 // ajax
                 $.ajax({
