--- a/src/main/resources/templates/post/postDetail.html
+++ b/src/main/resources/templates/post/postDetail.html
@@ -32,7 +32,7 @@
     </section>
     <script>
         $(function() {
-            // 글쓰기 버튼
+            // 글 수정 버튼
             $("#saveBtn").on("click", function() {
                 // alert("글쓰기");
                 let postId = $(this).data("post-id");
@@ -101,6 +101,7 @@
                 });
             });
 
+            // 글 삭제 버튼
             $("#delBtn").on("click", function() {
                 let postId = $(this).data("post-id");
 
@@ -108,13 +109,13 @@
                     // request
                     type:"delete"
                     , url:"/post/delete"
-                    , data:{"postId", postId}
+                    , data:{"postId":postId}
 
                     // response
                     , success:function(data) {
                         if (data.code == 200) {
                             alert("메모 삭제가 완료되었습니다.");
-                            location.href = "/post/post-list-view"
+                            location.href = "/post/post-list-view";
                         } else {
                             alert("메모를 삭제하는데 실패했습니다.");
                         }
