--- a/src/main/resources/templates/post/postList.html
+++ b/src/main/resources/templates/post/postList.html
@@ -30,8 +30,14 @@
                 </tbody>
             </table>
 
+            <!-- 페이징 -->
+            <div class="d-flex justify-content-center">
+                <a th:if="${prevId != 0}" th:href="|/post/post-list-view?prevId=${prevId}|" class="mr-5">&lt;&lt; 이전</a>
+                <a th:if="${nextId != 0}" th:href="|/post/post-list-view?nextId=${nextId}|">다음 &gt;&gt;</a>
+            </div>
+
             <!-- 글쓰기 버튼 영역 -->
-            <div class="d-flex justify-content-end">
+            <div class="d-flex justify-content-end mb-5">
                 <a href="/post/post-create-view" class="btn btn-warning">글쓰기</a>
             </div>
         </div>
